Fix: remove overflow hidden and add footer bottom border radius

--- a/components/Image/style/image.less
+++ b/components/Image/style/image.less
@@ -5,8 +5,7 @@
   display: inline-block;
   border-radius: @image-radius;
   vertical-align: middle;
-  overflow: hidden;
-  
+
   &-img {
     vertical-align: middle;
     border-radius: inherit;
@@ -24,6 +23,8 @@
     width: 100%;
     max-width: 100%;
     display: flex;
+    border-bottom-right-radius: inherit;
+    border-bottom-left-radius: inherit;
 
     &-block {
       flex: auto;
